--- a/.env
+++ b/.env
@@ -18,3 +18,24 @@
 APP_ENV=dev
 APP_SECRET=618b8021fee8f4d63815c6ea962250f7
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:5151%2FIelmcd@127.0.0.1:3306/notification?serverVersion=8.0.38&charset=utf8mb4"
+
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://RLM:5151@127.0.0.1:5432/notification-service?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+##MAILER_DSN=smtp://rlemoulec1%40myges.fr:Ca35GmzC@smtp.myges.fr:587
+
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=smtp://testinfos10%40gmail.com:amdradeon@smtp.gmail.com
+###< symfony/google-mailer ###
